data/derived/comb/progs/unify/prog0733.ml.out
Characters 108-109:
  let res = x + x + carry in
            ^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
